# Advent-Of-Code-2025

./: .gitignore
Day 1/: CMakeLists.txt  input_params.txt  main.c  part1.c  part2.c  repro_example.c
Day 2/: CMakeLists.txt  part1.cpp  part2.cpp
Day 3/day3/: pom.xml
Day 3/day3/src/main/java/com/payroll/: Main.java
Day 4/: Program.cs
Day 5/: main.py
Day 6/: index.html
Day 6/js/: app.js
